service arch + rest service